Source/Sks/Src/Accelero/IntelliSS7/tools/src/asnc/yacc.output
State 119 conflicts: 1 shift/reduce
State 136 conflicts: 1 shift/reduce
State 150 conflicts: 1 reduce/reduce
State 153 conflicts: 1 reduce/reduce
State 161 conflicts: 1 shift/reduce
State 165 conflicts: 1 shift/reduce
State 184 conflicts: 1 shift/reduce
State 198 conflicts: 2 reduce/reduce
State 202 conflicts: 3 shift/reduce
State 203 conflicts: 2 reduce/reduce
State 229 conflicts: 1 shift/reduce
State 230 conflicts: 1 shift/reduce
State 249 conflicts: 1 shift/reduce, 1 reduce/reduce
State 250 conflicts: 1 shift/reduce
State 287 conflicts: 2 reduce/reduce
State 306 conflicts: 1 shift/reduce
State 307 conflicts: 1 shift/reduce
State 313 conflicts: 1 shift/reduce
State 322 conflicts: 1 shift/reduce


Grammar

    0 $accept: ModuleDefinition $end

    1 @1: /* empty */

    2 @2: /* empty */

    3 ModuleDefinition: ModuleIdentifier DEFINITIONS TagDefault CCE @1 ModulePrefixes @2 BGIN ModuleBody END

    4 TagDefault: EXPLICIT TAGS
    5           | IMPLICIT TAGS
    6           | /* empty */

    7 ModuleIdentifier: ID AssignedIdentifier

    8 AssignedIdentifier: ObjectIdentifierValue
    9                   | /* empty */

   10 ModulePrefixes: PREFIXES String String String
   11               | /* empty */

   12 ModuleBody: Exports Imports AssignmentList

   13 @3: /* empty */

   14 Exports: EXPORTS @3 SymbolsExported SEMICOLON
   15        | /* empty */

   16 SymbolsExported: SymbolList
   17                | /* empty */

   18 @4: /* empty */

   19 Imports: IMPORTS @4 SymbolsImported SEMICOLON
   20        | /* empty */

   21 SymbolsImported: SymbolsFromModuleList
   22                | /* empty */

   23 SymbolsFromModuleList: SymbolsFromModuleList SymbolsFromModule
   24                      | SymbolsFromModule

   25 SymbolsFromModule: SymbolList FROM ModuleIdentifier

   26 SymbolList: SymbolList COMMA Symbol
   27           | Symbol
   28           | SymbolList COMMA MINUS Symbol
   29           | MINUS Symbol
   30           | SymbolList COMMA PLUS Symbol
   31           | PLUS Symbol

   32 Symbol: ID
   33       | NAME

   34 AssignmentList: AssignmentList Assignment
   35               | /* empty */

   36 String: ID
   37       | NAME

   38 Assignment: Typeassignment
   39           | Valueassignment

   40 Typeassignment: ID ParameterType CCE Type

   41 Type: BuiltinType
   42     | DefinedType
   43     | SubType

   44 Control: CONTROL
   45        | /* empty */

   46 ParameterType: PARAMETERTYPE
   47              | /* empty */

   48 Valtype: VALTYPE
   49        | /* empty */

   50 BuiltinType: BOOLEAN_kw PassBool
   51            | INTEGER PassInt NNlist
   52            | ENUMERATED PassInt LBRACE NamedNumberList RBRACE
   53            | Bitstring PassBit NNlist
   54            | Octetstring PassString
   55            | NIL
   56            | SEQUENCE Sctrl PassAny
   57            | SequenceOf Sctrl Valtype Control Type
   58            | SEQUENCE Sctrl Valtype LBRACE ElementTypes RBRACE
   59            | SET Sctrl PassAny
   60            | SetOf Sctrl Valtype Control Type
   61            | SET Sctrl Valtype LBRACE MemberTypes RBRACE
   62            | Tag IMPLICIT Type
   63            | Tag EXPLICIT Type
   64            | Tag Type
   65            | CHOICE Sctrl Valtype Control LBRACE AlternativeTypeList RBRACE
   66            | NAME LANGLE Type
   67            | AnyType PassAny
   68            | STAR AnyType PassAny
   69            | OBJECT IDENTIFIER PassOid
   70            | ENCRYPTED Type
   71            | REAL PassReal

   72 NNlist: LBRACE NamedNumberList RBRACE
   73       | /* empty */

   74 DefinedType: ID PassValue ValParameter
   75            | ID DOT ID PassValue ValParameter

   76 PassValue: VALA
   77          | VALB
   78          | VALI
   79          | VALX VLENGTH
   80          | VALOID
   81          | VALR
   82          | VALT
   83          | PassString

   84 AnyType: ANY
   85        | ANY DEFINED BY NAME

   86 PassOid: VALOID
   87        | /* empty */

   88 PassAny: VALA
   89        | /* empty */

   90 PassBool: VALB
   91         | /* empty */

   92 PassInt: VALI
   93        | /* empty */

   94 PassBit: VALX VLENGTH
   95        | VALT
   96        | NullPass

   97 PassString: VALS
   98           | VALO VLENGTH
   99           | VALQ
  100           | NullPass

  101 PassReal: VALR
  102         | /* empty */

  103 NullPass: /* empty */

  104 ValParameter: VALP
  105             | /* empty */

  106 NamedNumberList: NamedNumber
  107                | NamedNumberList COMMA NamedNumber

  108 NamedNumber: NAME LPAREN NumericValue RPAREN

  109 NumericValue: LITNUMBER
  110             | DefinedValue

  111 ElementTypes: OptionalTypeList
  112             | /* empty */

  113 MemberTypes: OptionalTypeList
  114            | /* empty */

  115 OptionalTypeList: OptionalType
  116                 | OptionalTypeList COMMA OptionalType

  117 OptionalType: NamedType
  118             | NamedType OPTIONAL_kw Control
  119             | NamedType DEFAULT Value Control
  120             | ComponentsOf
  121             | NAME ComponentsOf

  122 NamedType: NAME Type
  123          | Type

  124 ComponentsOf: Components Type

  125 AlternativeTypeList: NamedType
  126                    | AlternativeTypeList COMMA NamedType

  127 Tag: LBRACKET Class NumericValue RBRACKET

  128 Class: UNIVERSAL
  129      | APPLICATION
  130      | PRIVATE
  131      | /* empty */

  132 Valueassignment: NAME Type CCE Value

  133 Value: BuiltinValue
  134      | DefinedValue

  135 BuiltinValue: L_TRUE
  136             | L_FALSE
  137             | LITNUMBER
  138             | BSTRING
  139             | HSTRING
  140             | LBRACE ID IdentifierList RBRACE
  141             | LITSTRING
  142             | NIL
  143             | LBRACE Values RBRACE
  144             | NAME Value
  145             | Type Value
  146             | RealValue

  147 RealValue: NumericRealValue
  148          | SpecialRealValue

  149 SpecialRealValue: PLUSINFINITY
  150                 | MINUSINFINITY

  151 NumericRealValue: LBRACE LITNUMBER COMMA LITNUMBER COMMA LITNUMBER RBRACE

  152 DefinedValue: ID
  153             | NAME
  154             | ID DOT ID

  155 IdentifierList: COMMA ID IdentifierList
  156               | /* empty */

  157 Values: NamedValueList
  158       | /* empty */

  159 NamedValueList: NamedValue
  160               | NamedValueList COMMA NamedValue

  161 NamedValue: Value

  162 Octetstring: OCTET STRING
  163            | OCTETSTRING

  164 Bitstring: BITSTRING
  165          | BIT STRING

  166 SequenceOf: SEQUENCEOF
  167           | SEQUENCE OF_kw

  168 SetOf: SETOF
  169      | SET OF_kw

  170 Components: COMPONENTSOF
  171           | COMPONENTS OF_kw

  172 ObjectIdentifierValue: LBRACE ObjIdComponentList RBRACE

  173 ObjIdComponentList: ObjIdComponent
  174                   | ObjIdComponentList ObjIdComponent

  175 ObjIdComponent: NumberForm
  176               | NameAndNumberForm

  177 NumberForm: LITNUMBER
  178           | DefinedValue

  179 NameAndNumberForm: NAME LPAREN NumberForm RPAREN

  180 SubType: Type SubtypeSpec
  181        | SET SizeConstraint OF_kw Sctrl Control Type
  182        | SEQUENCE SizeConstraint OF_kw Sctrl Control Type

  183 SubtypeSpec: LPAREN SubtypeAlternative SubtypeAlternativeList RPAREN

  184 SubtypeAlternative: SubtypeValueSet
  185                   | SubtypeConstraint

  186 SubtypeAlternativeList: BAR SubtypeAlternative SubtypeAlternativeList
  187                       | /* empty */

  188 SubtypeValueSet: Value
  189                | ContainedSubType
  190                | ValueRange
  191                | PermittedAlphabet

  192 SubtypeConstraint: SizeConstraint
  193                  | InnerTypeConstraint

  194 ContainedSubType: INCLUDES Type

  195 ValueRange: LowerEndPoint DOTDOT UpperEndpoint

  196 LowerEndPoint: LowerEndValue
  197              | LowerEndValue LANGLE

  198 UpperEndpoint: UpperEndValue
  199              | LANGLE UpperEndValue

  200 LowerEndValue: Value
  201              | MIN

  202 UpperEndValue: Value
  203              | MAX

  204 SizeConstraint: SIZE_kw SubtypeSpec

  205 PermittedAlphabet: FROM SubtypeSpec

  206 InnerTypeConstraint: WITH COMPONENT SingleTypeConstraint
  207                    | WITH COMPONENTS MultipleTypeConstraints

  208 SingleTypeConstraint: SubtypeSpec

  209 MultipleTypeConstraints: FullSpecification
  210                        | PartialSpecification

  211 FullSpecification: LBRACE TypeConstraints RBRACE

  212 PartialSpecification: LBRACE DOTDOTDOT COMMA TypeConstraints RBRACE

  213 TypeConstraints: NamedConstraint
  214                | NamedConstraint COMMA TypeConstraints

  215 NamedConstraint: NAME Constraint
  216                | Constraint

  217 Constraint: ValueConstraint
  218           | PresenceConstraint
  219           | /* empty */

  220 ValueConstraint: SubtypeSpec

  221 PresenceConstraint: PRESENT
  222                   | ABSENT

  223 Sctrl: SCTRL
  224      | /* empty */


Terminals, with rules where they appear

$end (0) 0
error (256)
ABSENT (258) 222
ANY (259) 84 85
APPLICATION (260) 129
BAR (261) 186
BGIN (262) 3
BIT (263) 165
BITSTRING (264) 164
BOOLEAN_kw (265) 50
BSTRING (266) 138
BY (267) 85
CCE (268) 3 40 132
CHOICE (269) 65
COMMA (270) 26 28 30 107 116 126 151 155 160 212 214
COMPONENT (271) 206
COMPONENTS (272) 171 207
COMPONENTSOF (273) 170
CONTROL (274) 44
DEFAULT (275) 119
DEFINED (276) 85
DEFINITIONS (277) 3
DOT (278) 75 154
DOTDOT (279) 195
DOTDOTDOT (280) 212
ENCRYPTED (281) 70
END (282) 3
ENUMERATED (283) 52
EXPORTS (284) 14
EXPLICIT (285) 4 63
L_FALSE (286) 136
FROM (287) 25 205
HSTRING (288) 139
ID (289) 7 32 36 40 74 75 140 152 154 155
IDENTIFIER (290) 69
IMPLICIT (291) 5 62
IMPORTS (292) 19
INCLUDES (293) 194
INTEGER (294) 51
LANGLE (295) 66 197 199
LBRACE (296) 52 58 61 65 72 140 143 151 172 211 212
LBRACKET (297) 127
LITNUMBER (298) 109 137 151 177
LITSTRING (299) 141
LPAREN (300) 108 179 183
MIN (301) 201
MINUS (302) 28 29
MAX (303) 203
NAME (304) 33 37 66 85 108 121 122 132 144 153 179 215
NIL (305) 55 142
OBJECT (306) 69
OCTET (307) 162
OCTETSTRING (308) 163
OF_kw (309) 167 169 171 181 182
OPTIONAL_kw (310) 118
PARAMETERTYPE (311) 46
PLUS (312) 30 31
PREFIXES (313) 10
PRESENT (314) 221
PRIVATE (315) 130
RBRACE (316) 52 58 61 65 72 140 143 151 172 211 212
RBRACKET (317) 127
REAL (318) 71
RPAREN (319) 108 179 183
STAR (320) 68
SEMICOLON (321) 14 19
SEQUENCE (322) 56 58 167 182
SEQUENCEOF (323) 166
SET (324) 59 61 169 181
SETOF (325) 168
SIZE_kw (326) 204
STRING (327) 162 165
TAGS (328) 4 5
L_TRUE (329) 135
UNIVERSAL (330) 128
VALA (331) 76 88
VALB (332) 77 90
VALI (333) 78 92
VALS (334) 97
VALP (335) 104
VALO (336) 98
VALOID (337) 80 86
VALR (338) 81 101
VALT (339) 82 95
VALTYPE (340) 48
VALQ (341) 99
VALX (342) 79 94
VLENGTH (343) 79 94 98
WITH (344) 206 207
SCTRL (345) 223
PLUSINFINITY (346) 149
MINUSINFINITY (347) 150


Nonterminals, with rules where they appear

$accept (93)
    on left: 0
ModuleDefinition (94)
    on left: 3, on right: 0
@1 (95)
    on left: 1, on right: 3
@2 (96)
    on left: 2, on right: 3
TagDefault (97)
    on left: 4 5 6, on right: 3
ModuleIdentifier (98)
    on left: 7, on right: 3 25
AssignedIdentifier (99)
    on left: 8 9, on right: 7
ModulePrefixes (100)
    on left: 10 11, on right: 3
ModuleBody (101)
    on left: 12, on right: 3
Exports (102)
    on left: 14 15, on right: 12
@3 (103)
    on left: 13, on right: 14
SymbolsExported (104)
    on left: 16 17, on right: 14
Imports (105)
    on left: 19 20, on right: 12
@4 (106)
    on left: 18, on right: 19
SymbolsImported (107)
    on left: 21 22, on right: 19
SymbolsFromModuleList (108)
    on left: 23 24, on right: 21 23
SymbolsFromModule (109)
    on left: 25, on right: 23 24
SymbolList (110)
    on left: 26 27 28 29 30 31, on right: 16 25 26 28 30
Symbol (111)
    on left: 32 33, on right: 26 27 28 29 30 31
AssignmentList (112)
    on left: 34 35, on right: 12 34
String (113)
    on left: 36 37, on right: 10
Assignment (114)
    on left: 38 39, on right: 34
Typeassignment (115)
    on left: 40, on right: 38
Type (116)
    on left: 41 42 43, on right: 40 57 60 62 63 64 66 70 122 123 124
    132 145 180 181 182 194
Control (117)
    on left: 44 45, on right: 57 60 65 118 119 181 182
ParameterType (118)
    on left: 46 47, on right: 40
Valtype (119)
    on left: 48 49, on right: 57 58 60 61 65
BuiltinType (120)
    on left: 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67
    68 69 70 71, on right: 41
NNlist (121)
    on left: 72 73, on right: 51 53
DefinedType (122)
    on left: 74 75, on right: 42
PassValue (123)
    on left: 76 77 78 79 80 81 82 83, on right: 74 75
AnyType (124)
    on left: 84 85, on right: 67 68
PassOid (125)
    on left: 86 87, on right: 69
PassAny (126)
    on left: 88 89, on right: 56 59 67 68
PassBool (127)
    on left: 90 91, on right: 50
PassInt (128)
    on left: 92 93, on right: 51 52
PassBit (129)
    on left: 94 95 96, on right: 53
PassString (130)
    on left: 97 98 99 100, on right: 54 83
PassReal (131)
    on left: 101 102, on right: 71
NullPass (132)
    on left: 103, on right: 96 100
ValParameter (133)
    on left: 104 105, on right: 74 75
NamedNumberList (134)
    on left: 106 107, on right: 52 72 107
NamedNumber (135)
    on left: 108, on right: 106 107
NumericValue (136)
    on left: 109 110, on right: 108 127
ElementTypes (137)
    on left: 111 112, on right: 58
MemberTypes (138)
    on left: 113 114, on right: 61
OptionalTypeList (139)
    on left: 115 116, on right: 111 113 116
OptionalType (140)
    on left: 117 118 119 120 121, on right: 115 116
NamedType (141)
    on left: 122 123, on right: 117 118 119 125 126
ComponentsOf (142)
    on left: 124, on right: 120 121
AlternativeTypeList (143)
    on left: 125 126, on right: 65 126
Tag (144)
    on left: 127, on right: 62 63 64
Class (145)
    on left: 128 129 130 131, on right: 127
Valueassignment (146)
    on left: 132, on right: 39
Value (147)
    on left: 133 134, on right: 119 132 144 145 161 188 200 202
BuiltinValue (148)
    on left: 135 136 137 138 139 140 141 142 143 144 145 146,
    on right: 133
RealValue (149)
    on left: 147 148, on right: 146
SpecialRealValue (150)
    on left: 149 150, on right: 148
NumericRealValue (151)
    on left: 151, on right: 147
DefinedValue (152)
    on left: 152 153 154, on right: 110 134 178
IdentifierList (153)
    on left: 155 156, on right: 140 155
Values (154)
    on left: 157 158, on right: 143
NamedValueList (155)
    on left: 159 160, on right: 157 160
NamedValue (156)
    on left: 161, on right: 159 160
Octetstring (157)
    on left: 162 163, on right: 54
Bitstring (158)
    on left: 164 165, on right: 53
SequenceOf (159)
    on left: 166 167, on right: 57
SetOf (160)
    on left: 168 169, on right: 60
Components (161)
    on left: 170 171, on right: 124
ObjectIdentifierValue (162)
    on left: 172, on right: 8
ObjIdComponentList (163)
    on left: 173 174, on right: 172 174
ObjIdComponent (164)
    on left: 175 176, on right: 173 174
NumberForm (165)
    on left: 177 178, on right: 175 179
NameAndNumberForm (166)
    on left: 179, on right: 176
SubType (167)
    on left: 180 181 182, on right: 43
SubtypeSpec (168)
    on left: 183, on right: 180 204 205 208 220
SubtypeAlternative (169)
    on left: 184 185, on right: 183 186
SubtypeAlternativeList (170)
    on left: 186 187, on right: 183 186
SubtypeValueSet (171)
    on left: 188 189 190 191, on right: 184
SubtypeConstraint (172)
    on left: 192 193, on right: 185
ContainedSubType (173)
    on left: 194, on right: 189
ValueRange (174)
    on left: 195, on right: 190
LowerEndPoint (175)
    on left: 196 197, on right: 195
UpperEndpoint (176)
    on left: 198 199, on right: 195
LowerEndValue (177)
    on left: 200 201, on right: 196 197
UpperEndValue (178)
    on left: 202 203, on right: 198 199
SizeConstraint (179)
    on left: 204, on right: 181 182 192
PermittedAlphabet (180)
    on left: 205, on right: 191
InnerTypeConstraint (181)
    on left: 206 207, on right: 193
SingleTypeConstraint (182)
    on left: 208, on right: 206
MultipleTypeConstraints (183)
    on left: 209 210, on right: 207
FullSpecification (184)
    on left: 211, on right: 209
PartialSpecification (185)
    on left: 212, on right: 210
TypeConstraints (186)
    on left: 213 214, on right: 211 212 214
NamedConstraint (187)
    on left: 215 216, on right: 213 214
Constraint (188)
    on left: 217 218 219, on right: 215 216
ValueConstraint (189)
    on left: 220, on right: 217
PresenceConstraint (190)
    on left: 221 222, on right: 218
Sctrl (191)
    on left: 223 224, on right: 56 57 58 59 60 61 65 181 182


state 0

    0 $accept: . ModuleDefinition $end

    ID  shift, and go to state 1

    ModuleDefinition  go to state 2
    ModuleIdentifier  go to state 3


state 1

    7 ModuleIdentifier: ID . AssignedIdentifier

    LBRACE  shift, and go to state 4

    $default  reduce using rule 9 (AssignedIdentifier)

    AssignedIdentifier     go to state 5
    ObjectIdentifierValue  go to state 6


state 2

    0 $accept: ModuleDefinition . $end

    $end  shift, and go to state 7


state 3

    3 ModuleDefinition: ModuleIdentifier . DEFINITIONS TagDefault CCE @1 ModulePrefixes @2 BGIN ModuleBody END

    DEFINITIONS  shift, and go to state 8


state 4

  172 ObjectIdentifierValue: LBRACE . ObjIdComponentList RBRACE

    ID         shift, and go to state 9
    LITNUMBER  shift, and go to state 10
    NAME       shift, and go to state 11

    DefinedValue        go to state 12
    ObjIdComponentList  go to state 13
    ObjIdComponent      go to state 14
    NumberForm          go to state 15
    NameAndNumberForm   go to state 16


state 5

    7 ModuleIdentifier: ID AssignedIdentifier .

    $default  reduce using rule 7 (ModuleIdentifier)


state 6

    8 AssignedIdentifier: ObjectIdentifierValue .

    $default  reduce using rule 8 (AssignedIdentifier)


state 7

    0 $accept: ModuleDefinition $end .

    $default  accept


state 8

    3 ModuleDefinition: ModuleIdentifier DEFINITIONS . TagDefault CCE @1 ModulePrefixes @2 BGIN ModuleBody END

    EXPLICIT  shift, and go to state 17
    IMPLICIT  shift, and go to state 18

    $default  reduce using rule 6 (TagDefault)

    TagDefault  go to state 19


state 9

  152 DefinedValue: ID .
  154             | ID . DOT ID

    DOT  shift, and go to state 20

    $default  reduce using rule 152 (DefinedValue)


state 10

  177 NumberForm: LITNUMBER .

    $default  reduce using rule 177 (NumberForm)


state 11

  153 DefinedValue: NAME .
  179 NameAndNumberForm: NAME . LPAREN NumberForm RPAREN

    LPAREN  shift, and go to state 21

    $default  reduce using rule 153 (DefinedValue)


state 12

  178 NumberForm: DefinedValue .

    $default  reduce using rule 178 (NumberForm)


state 13

  172 ObjectIdentifierValue: LBRACE ObjIdComponentList . RBRACE
  174 ObjIdComponentList: ObjIdComponentList . ObjIdComponent

    ID         shift, and go to state 9
    LITNUMBER  shift, and go to state 10
    NAME       shift, and go to state 11
    RBRACE     shift, and go to state 22

    DefinedValue       go to state 12
    ObjIdComponent     go to state 23
    NumberForm         go to state 15
    NameAndNumberForm  go to state 16


state 14

  173 ObjIdComponentList: ObjIdComponent .

    $default  reduce using rule 173 (ObjIdComponentList)


state 15

  175 ObjIdComponent: NumberForm .

    $default  reduce using rule 175 (ObjIdComponent)


state 16

  176 ObjIdComponent: NameAndNumberForm .

    $default  reduce using rule 176 (ObjIdComponent)


state 17

    4 TagDefault: EXPLICIT . TAGS

    TAGS  shift, and go to state 24


state 18

    5 TagDefault: IMPLICIT . TAGS

    TAGS  shift, and go to state 25


state 19

    3 ModuleDefinition: ModuleIdentifier DEFINITIONS TagDefault . CCE @1 ModulePrefixes @2 BGIN ModuleBody END

    CCE  shift, and go to state 26


state 20

  154 DefinedValue: ID DOT . ID

    ID  shift, and go to state 27


state 21

  179 NameAndNumberForm: NAME LPAREN . NumberForm RPAREN

    ID         shift, and go to state 9
    LITNUMBER  shift, and go to state 10
    NAME       shift, and go to state 28

    DefinedValue  go to state 12
    NumberForm    go to state 29


state 22

  172 ObjectIdentifierValue: LBRACE ObjIdComponentList RBRACE .

    $default  reduce using rule 172 (ObjectIdentifierValue)


state 23

  174 ObjIdComponentList: ObjIdComponentList ObjIdComponent .

    $default  reduce using rule 174 (ObjIdComponentList)


state 24

    4 TagDefault: EXPLICIT TAGS .

    $default  reduce using rule 4 (TagDefault)


state 25

    5 TagDefault: IMPLICIT TAGS .

    $default  reduce using rule 5 (TagDefault)


state 26

    3 ModuleDefinition: ModuleIdentifier DEFINITIONS TagDefault CCE . @1 ModulePrefixes @2 BGIN ModuleBody END

    $default  reduce using rule 1 (@1)

    @1  go to state 30


state 27

  154 DefinedValue: ID DOT ID .

    $default  reduce using rule 154 (DefinedValue)


state 28

  153 DefinedValue: NAME .

    $default  reduce using rule 153 (DefinedValue)


state 29

  179 NameAndNumberForm: NAME LPAREN NumberForm . RPAREN

    RPAREN  shift, and go to state 31


state 30

    3 ModuleDefinition: ModuleIdentifier DEFINITIONS TagDefault CCE @1 . ModulePrefixes @2 BGIN ModuleBody END

    PREFIXES  shift, and go to state 32

    $default  reduce using rule 11 (ModulePrefixes)

    ModulePrefixes  go to state 33


state 31

  179 NameAndNumberForm: NAME LPAREN NumberForm RPAREN .

    $default  reduce using rule 179 (NameAndNumberForm)


state 32

   10 ModulePrefixes: PREFIXES . String String String

    ID    shift, and go to state 34
    NAME  shift, and go to state 35

    String  go to state 36


state 33

    3 ModuleDefinition: ModuleIdentifier DEFINITIONS TagDefault CCE @1 ModulePrefixes . @2 BGIN ModuleBody END

    $default  reduce using rule 2 (@2)

    @2  go to state 37


state 34

   36 String: ID .

    $default  reduce using rule 36 (String)


state 35

   37 String: NAME .

    $default  reduce using rule 37 (String)


state 36

   10 ModulePrefixes: PREFIXES String . String String

    ID    shift, and go to state 34
    NAME  shift, and go to state 35

    String  go to state 38


state 37

    3 ModuleDefinition: ModuleIdentifier DEFINITIONS TagDefault CCE @1 ModulePrefixes @2 . BGIN ModuleBody END

    BGIN  shift, and go to state 39


state 38

   10 ModulePrefixes: PREFIXES String String . String

    ID    shift, and go to state 34
    NAME  shift, and go to state 35

    String  go to state 40


state 39

    3 ModuleDefinition: ModuleIdentifier DEFINITIONS TagDefault CCE @1 ModulePrefixes @2 BGIN . ModuleBody END

    EXPORTS  shift, and go to state 41

    $default  reduce using rule 15 (Exports)

    ModuleBody  go to state 42
    Exports     go to state 43


state 40

   10 ModulePrefixes: PREFIXES String String String .

    $default  reduce using rule 10 (ModulePrefixes)


state 41

   14 Exports: EXPORTS . @3 SymbolsExported SEMICOLON

    $default  reduce using rule 13 (@3)

    @3  go to state 44


state 42

    3 ModuleDefinition: ModuleIdentifier DEFINITIONS TagDefault CCE @1 ModulePrefixes @2 BGIN ModuleBody . END

    END  shift, and go to state 45


state 43

   12 ModuleBody: Exports . Imports AssignmentList

    IMPORTS  shift, and go to state 46

    $default  reduce using rule 20 (Imports)

    Imports  go to state 47


state 44

   14 Exports: EXPORTS @3 . SymbolsExported SEMICOLON

    ID     shift, and go to state 48
    MINUS  shift, and go to state 49
    NAME   shift, and go to state 50
    PLUS   shift, and go to state 51

    $default  reduce using rule 17 (SymbolsExported)

    SymbolsExported  go to state 52
    SymbolList       go to state 53
    Symbol           go to state 54


state 45

    3 ModuleDefinition: ModuleIdentifier DEFINITIONS TagDefault CCE @1 ModulePrefixes @2 BGIN ModuleBody END .

    $default  reduce using rule 3 (ModuleDefinition)


state 46

   19 Imports: IMPORTS . @4 SymbolsImported SEMICOLON

    $default  reduce using rule 18 (@4)

    @4  go to state 55


state 47

   12 ModuleBody: Exports Imports . AssignmentList

    $default  reduce using rule 35 (AssignmentList)

    AssignmentList  go to state 56


state 48

   32 Symbol: ID .

    $default  reduce using rule 32 (Symbol)


state 49

   29 SymbolList: MINUS . Symbol

    ID    shift, and go to state 48
    NAME  shift, and go to state 50

    Symbol  go to state 57


state 50

   33 Symbol: NAME .

    $default  reduce using rule 33 (Symbol)


state 51

   31 SymbolList: PLUS . Symbol

    ID    shift, and go to state 48
    NAME  shift, and go to state 50

    Symbol  go to state 58


state 52

   14 Exports: EXPORTS @3 SymbolsExported . SEMICOLON

    SEMICOLON  shift, and go to state 59


state 53

   16 SymbolsExported: SymbolList .
   26 SymbolList: SymbolList . COMMA Symbol
   28           | SymbolList . COMMA MINUS Symbol
   30           | SymbolList . COMMA PLUS Symbol

    COMMA  shift, and go to state 60

    $default  reduce using rule 16 (SymbolsExported)


state 54

   27 SymbolList: Symbol .

    $default  reduce using rule 27 (SymbolList)


state 55

   19 Imports: IMPORTS @4 . SymbolsImported SEMICOLON

    ID     shift, and go to state 48
    MINUS  shift, and go to state 49
    NAME   shift, and go to state 50
    PLUS   shift, and go to state 51

    $default  reduce using rule 22 (SymbolsImported)

    SymbolsImported        go to state 61
    SymbolsFromModuleList  go to state 62
    SymbolsFromModule      go to state 63
    SymbolList             go to state 64
    Symbol                 go to state 54


state 56

   12 ModuleBody: Exports Imports AssignmentList .
   34 AssignmentList: AssignmentList . Assignment

    ID    shift, and go to state 65
    NAME  shift, and go to state 66

    $default  reduce using rule 12 (ModuleBody)

    Assignment       go to state 67
    Typeassignment   go to state 68
    Valueassignment  go to state 69


state 57

   29 SymbolList: MINUS Symbol .

    $default  reduce using rule 29 (SymbolList)


state 58

   31 SymbolList: PLUS Symbol .

    $default  reduce using rule 31 (SymbolList)


state 59

   14 Exports: EXPORTS @3 SymbolsExported SEMICOLON .

    $default  reduce using rule 14 (Exports)


state 60

   26 SymbolList: SymbolList COMMA . Symbol
   28           | SymbolList COMMA . MINUS Symbol
   30           | SymbolList COMMA . PLUS Symbol

    ID     shift, and go to state 48
    MINUS  shift, and go to state 70
    NAME   shift, and go to state 50
    PLUS   shift, and go to state 71

    Symbol  go to state 72


state 61

   19 Imports: IMPORTS @4 SymbolsImported . SEMICOLON

    SEMICOLON  shift, and go to state 73


state 62

   21 SymbolsImported: SymbolsFromModuleList .
   23 SymbolsFromModuleList: SymbolsFromModuleList . SymbolsFromModule

    ID     shift, and go to state 48
    MINUS  shift, and go to state 49
    NAME   shift, and go to state 50
    PLUS   shift, and go to state 51

    $default  reduce using rule 21 (SymbolsImported)

    SymbolsFromModule  go to state 74
    SymbolList         go to state 64
    Symbol             go to state 54


state 63

   24 SymbolsFromModuleList: SymbolsFromModule .

    $default  reduce using rule 24 (SymbolsFromModuleList)


state 64

   25 SymbolsFromModule: SymbolList . FROM ModuleIdentifier
   26 SymbolList: SymbolList . COMMA Symbol
   28           | SymbolList . COMMA MINUS Symbol
   30           | SymbolList . COMMA PLUS Symbol

    COMMA  shift, and go to state 60
    FROM   shift, and go to state 75


state 65

   40 Typeassignment: ID . ParameterType CCE Type

    PARAMETERTYPE  shift, and go to state 76

    $default  reduce using rule 47 (ParameterType)

    ParameterType  go to state 77


state 66

  132 Valueassignment: NAME . Type CCE Value

    ANY          shift, and go to state 78
    BIT          shift, and go to state 79
    BITSTRING    shift, and go to state 80
    BOOLEAN_kw   shift, and go to state 81
    CHOICE       shift, and go to state 82
    ENCRYPTED    shift, and go to state 83
    ENUMERATED   shift, and go to state 84
    ID           shift, and go to state 85
    INTEGER      shift, and go to state 86
    LBRACKET     shift, and go to state 87
    NAME         shift, and go to state 88
    NIL          shift, and go to state 89
    OBJECT       shift, and go to state 90
    OCTET        shift, and go to state 91
    OCTETSTRING  shift, and go to state 92
    REAL         shift, and go to state 93
    STAR         shift, and go to state 94
    SEQUENCE     shift, and go to state 95
    SEQUENCEOF   shift, and go to state 96
    SET          shift, and go to state 97
    SETOF        shift, and go to state 98

    Type         go to state 99
    BuiltinType  go to state 100
    DefinedType  go to state 101
    AnyType      go to state 102
    Tag          go to state 103
    Octetstring  go to state 104
    Bitstring    go to state 105
    SequenceOf   go to state 106
    SetOf        go to state 107
    SubType      go to state 108


state 67

   34 AssignmentList: AssignmentList Assignment .

    $default  reduce using rule 34 (AssignmentList)


state 68

   38 Assignment: Typeassignment .

    $default  reduce using rule 38 (Assignment)


state 69

   39 Assignment: Valueassignment .

    $default  reduce using rule 39 (Assignment)


state 70

   28 SymbolList: SymbolList COMMA MINUS . Symbol

    ID    shift, and go to state 48
    NAME  shift, and go to state 50

    Symbol  go to state 109


state 71

   30 SymbolList: SymbolList COMMA PLUS . Symbol

    ID    shift, and go to state 48
    NAME  shift, and go to state 50

    Symbol  go to state 110


state 72

   26 SymbolList: SymbolList COMMA Symbol .

    $default  reduce using rule 26 (SymbolList)


state 73

   19 Imports: IMPORTS @4 SymbolsImported SEMICOLON .

    $default  reduce using rule 19 (Imports)


state 74

   23 SymbolsFromModuleList: SymbolsFromModuleList SymbolsFromModule .

    $default  reduce using rule 23 (SymbolsFromModuleList)


state 75

   25 SymbolsFromModule: SymbolList FROM . ModuleIdentifier

    ID  shift, and go to state 1

    ModuleIdentifier  go to state 111


state 76

   46 ParameterType: PARAMETERTYPE .

    $default  reduce using rule 46 (ParameterType)


state 77

   40 Typeassignment: ID ParameterType . CCE Type

    CCE  shift, and go to state 112


state 78

   84 AnyType: ANY .
   85        | ANY . DEFINED BY NAME

    DEFINED  shift, and go to state 113

    $default  reduce using rule 84 (AnyType)


state 79

  165 Bitstring: BIT . STRING

    STRING  shift, and go to state 114


state 80

  164 Bitstring: BITSTRING .

    $default  reduce using rule 164 (Bitstring)


state 81

   50 BuiltinType: BOOLEAN_kw . PassBool

    VALB  shift, and go to state 115

    $default  reduce using rule 91 (PassBool)

    PassBool  go to state 116


state 82

   65 BuiltinType: CHOICE . Sctrl Valtype Control LBRACE AlternativeTypeList RBRACE

    SCTRL  shift, and go to state 117

    $default  reduce using rule 224 (Sctrl)

    Sctrl  go to state 118


state 83

   70 BuiltinType: ENCRYPTED . Type
